--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "nest start",
     "start:p": "nest start --host http://192.168.172.189",
     "start:dev": "nest start --watch",
+    "d": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
